fix text alignment

--- a/css/characters.css
+++ b/css/characters.css
@@ -49,6 +49,7 @@ section.grid-layout {
     font-family: Arial, Helvetica, sans-serif;
     padding: 0.75rem 3.25rem 2.75rem 1.5rem;
     color: black;
+    text-align: justify;
 }
 
 .background-story > label{
