--- a/css/home.css
+++ b/css/home.css
@@ -57,6 +57,7 @@ section{
 
 section > p{
     font-family: Helvetica, Arial, sans-serif;
+    text-align: justify;
 }
 
 section > h1{
