--- a/css/lore.css
+++ b/css/lore.css
@@ -46,7 +46,6 @@ section > img {
 }
 
 .story-section > p{
-    text-align: left;
     font-family: Helvetica, Arial,  sans-serif;
     font-size: 1rem;
 }
